--- a/03.html
+++ b/03.html
@@ -1,1 +1,28 @@
 
+      <!-- 03. STORYBOOK SECTION -->
+        <section id="storybook" class="section-content pt-32 pb-20 max-w-7xl mx-auto px-4 text-center">
+            <div class="max-w-3xl mx-auto py-20">
+                <i class="fa-solid fa-book-open text-6xl text-rust-500 mb-6"></i>
+                <h2 class="text-4xl font-bold text-navy-900 mb-6">Digital Storybook: 영도의 맥박</h2>
+                <p class="text-lg text-slate-600 mb-12">
+                    데이터 분석 결과와 영도 조선소의 감성적 이미지를 결합한 인터랙티브 스토리북을 확인하세요.
+                </p>
+
+                <div class="bg-white p-12 rounded-3xl shadow-xl border border-slate-200 mb-12 transform hover:-translate-y-2 transition-transform duration-300">
+                    <h4 class="font-bold text-xl mb-6 text-navy-900 text-left">Contents Preview</h4>
+                    <ul class="text-left space-y-4 text-slate-500 mb-10">
+                        <li><i class="fa-solid fa-check text-rust-500 mr-3"></i> 땀과 쇳소리의 시대: 깡깡이 아지매</li>
+                        <li><i class="fa-solid fa-check text-rust-500 mr-3"></i> 멈춰버린 망치 소리: 노인과 바다</li>
+                        <li><i class="fa-solid fa-check text-rust-500 mr-3"></i> 다시 뛰는 심장: MRO & 북극항로</li>
+                    </ul>
+                    <a href="#" class="inline-block bg-rust-500 text-white px-10 py-5 rounded-full font-bold hover:bg-rust-600 transition-all shadow-lg text-lg">
+                        스토리북 전체보기 <i class="fa-solid fa-external-link ml-3"></i>
+                    </a>
+                </div>
+
+                <div class="flex justify-between border-t border-slate-200 pt-10">
+                    <button onclick="router('analysis')" class="font-bold text-slate-500 hover:text-navy-900"><i class="fa-solid fa-arrow-left mr-2"></i> 이전 단계</button>
+                    <button onclick="router('video')" class="font-bold text-navy-900 hover:text-rust-500">마지막: 영상보기 <i class="fa-solid fa-arrow-right ml-2"></i></button>
+                </div>
+            </div>
+        </section>
