--- a/04.html
+++ b/04.html
@@ -1,1 +1,22 @@
+     <!-- 04. VIDEO SECTION -->
+        <section id="video" class="section-content w-full min-h-screen bg-navy-900 text-white pt-32 pb-20">
+            <div class="max-w-5xl mx-auto px-4 text-center">
+                <span class="text-rust-500 font-bold tracking-widest text-xs uppercase mb-4 block">Documentary Film</span>
+                <h2 class="text-4xl font-bold mb-4">다큐멘터리: 잠든 쇳소리</h2>
+                <p class="text-slate-400 mb-12">과거의 소음이 미래의 리듬이 되기까지의 기록</p>
 
+                <div class="group relative bg-black aspect-video rounded-3xl overflow-hidden shadow-2xl mb-12 border border-white/10 flex items-center justify-center">
+                    <img src="https://images.unsplash.com/photo-1628268956637-25e1a49f572a?q=80&w=2070&auto=format&fit=crop" class="absolute inset-0 w-full h-full object-cover opacity-40" alt="Video Thumbnail">
+                    <div class="relative z-10 text-center">
+                        <div class="w-24 h-24 bg-rust-500 rounded-full flex items-center justify-center mb-6 mx-auto hover:scale-110 transition-transform cursor-pointer">
+                            <i class="fa-solid fa-play text-4xl ml-2 text-white"></i>
+                        </div>
+                        <p class="font-bold text-xl">영상 준비 중</p>
+                    </div>
+                </div>
+
+                <button onclick="router('home')" class="bg-white text-navy-900 px-10 py-4 rounded-full font-bold hover:bg-rust-500 hover:text-white transition-all">
+                    메인 화면으로 돌아가기 <i class="fa-solid fa-home ml-2"></i>
+                </button>
+            </div>
+        </section>
