--- a/01.html
+++ b/01.html
@@ -1,1 +1,67 @@
+<!-- 01. PLANNING SECTION -->
+        <section id="planning" class="section-content pt-32 pb-20 max-w-7xl mx-auto px-4">
+            <div class="border-b-2 border-rust-500 pb-4 mb-12 flex flex-col md:flex-row md:items-end md:justify-between">
+                <div>
+                    <h2 class="text-4xl font-bold text-navy-900">01. Project Planning</h2>
+                    <p class="text-slate-500 mt-2">잠든 쇳소리를 깨울 고동: 기획 배경 및 연구 방법론</p>
+                </div>
+                <div class="mt-4 md:mt-0 text-navy-900 px-4 py-2 rounded-lg text-sm font-bold border border-navy-900">
+                    빅데이터 기반 도시재생 비전 제언
+                </div>
+            </div>
 
+            <div class="grid md:grid-cols-2 gap-12 mb-16">
+                <div class="space-y-6">
+                    <h3 class="text-2xl font-bold text-navy-900 border-l-4 border-rust-500 pl-4">과거: 땀과 쇳소리가 멈추지 않던 영광</h3>
+                    <p class="text-slate-600 leading-relaxed italic">
+                        "5m 높이 선박 비계에 매달려 맨손으로 작업했던 어머니들의 억척스러움이 오늘날 부산의 뿌리가 되었습니다."
+                    </p>
+                    <div class="bg-white p-6 rounded-2xl shadow-sm border border-slate-100">
+                        <h4 class="font-bold text-rust-500 mb-2">깡깡이 아지매의 헌신</h4>
+                        <p class="text-sm text-slate-600">
+                            1887년 최초의 근대식 조선소가 세워진 영도는 국가 산업화의 심장이었습니다. 망치 하나로 녹과 조개껍데기를 떼어내며 자식들을 키워낸 어머니들의 노동은 단순한 일터를 넘어 영도의 정체성이었습니다.
+                        </p>
+                    </div>
+                </div>
+                <div class="rounded-2xl overflow-hidden shadow-xl">
+                    <img src="https://images.unsplash.com/photo-1590579491624-f98f36d4c763?q=80&w=2000&auto=format&fit=crop" class="w-full h-full object-cover" alt="조선소 현장">
+                </div>
+            </div>
+
+            <div class="bg-navy-900 text-white p-10 rounded-3xl mb-16 relative overflow-hidden">
+                <div class="grid md:grid-cols-3 gap-8 relative z-10">
+                    <div class="md:col-span-2">
+                        <h3 class="text-rust-500 font-bold mb-4 tracking-widest uppercase text-xs">The Silence of the Present</h3>
+                        <p class="text-2xl font-bold mb-6">"내일모레 갈 노인들만 이런 곳에 남아서 살죠."</p>
+                        <p class="text-slate-400 leading-relaxed mb-6">
+                            원양어선 기관사로 30년을 보낸 강정환 씨의 주변은 이제 붕괴 직전의 빈집들로 둘러싸여 있습니다. 지난 30년간 인구는 절반으로 줄었고, 멈춰버린 망치 소리만큼 정적만이 남았습니다.
+                        </p>
+                        <div class="flex items-center space-x-4">
+                            <div class="text-center">
+                                <span class="block text-3xl font-black text-rust-500">1,000+</span>
+                                <span class="text-[10px] text-slate-400">영도구 내 빈집</span>
+                            </div>
+                            <div class="h-8 w-[1px] bg-white/20"></div>
+                            <div class="text-center">
+                                <span class="block text-3xl font-black text-rust-500">5배</span>
+                                <span class="text-[10px] text-slate-400">빈집 증가(20년 기준)</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-white/5 p-6 rounded-2xl border border-white/10 backdrop-blur-sm">
+                        <h4 class="font-bold text-sm mb-4">Safety Warning: 침묵의 위기</h4>
+                        <ul class="text-xs space-y-3 text-slate-300">
+                            <li><i class="fa-solid fa-triangle-exclamation text-yellow-500 mr-2"></i> 붕괴 우려 및 화재 취약</li>
+                            <li><i class="fa-solid fa-biohazard text-yellow-500 mr-2"></i> 위생 악화 (쓰레기, 해충)</li>
+                            <li><i class="fa-solid fa-users-slash text-yellow-500 mr-2"></i> 전국 83개 소멸위험지역 지정</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex justify-end">
+                <button onclick="router('analysis')" class="bg-navy-900 text-white px-8 py-4 rounded-full font-bold hover:bg-rust-500 transition-all shadow-lg hover:-translate-y-1">
+                    다음: 데이터 분석 결과 <i class="fa-solid fa-arrow-right ml-2"></i>
+                </button>
+            </div>
+        </section>
